tests/snapshots/r#mod__float.snap
---
source: tests/mod.rs
expression: "edn_parse(\"12.3\").unwrap().cst"
---
edn [0..4]
    literal [0..4]
        Number "12.3" [0..4]
