tests/snapshots/r#mod__int.snap
---
source: tests/mod.rs
expression: "edn_parse(\"123\").unwrap().cst"
---
edn [0..3]
    literal [0..3]
        Number "123" [0..3]
