tests/snapshots/r#mod__neg_float.snap
---
source: tests/mod.rs
expression: "edn_parse(\"-12.3\").unwrap().cst"
---
edn [0..5]
    literal [0..5]
        Number "-12.3" [0..5]
